request-authorization/require-token.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: api-jwt
spec:
  jwtRules:
  - issuer: https://wp.pl/
    audiences: [shop-api]
    jwksUri: https://wp.pl/.well-known/jwks.json
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: api-jwt-access
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ['*']
